--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=5">
-    <title>不才才 bucaicai</title>
-    <meta name="description" content="95后青年，后端开发者，略懂前端, 学生，实习，缺乏社会的毒打">
-    <meta name="keywords" content="Java,Spring,个人博客，微信小程序，博客">
+    <title>宇航员dale</title>
+    <meta name="description" content="PKU信科电子大二摸鱼人">
+    <meta name="keywords" content="音游，摄影，硬件，排球">
     <meta name="format-detection" content="telephone=no">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="static/css/index.css">
@@ -29,7 +29,7 @@
                     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
                     <script>
                         var typed = new Typed(".blogtitle", {
-                            strings: ['求知若饥，虚心若愚', 'Stay Hungry Stay Foolish'],
+                            strings: ['阳光下做个孩子，风雨里做个大人', 'Be tough in bad times and be true in good times'],
                             startDelay: 300,
                             typeSpeed: 100,
                             loop: true,
@@ -49,8 +49,8 @@
                                 <img class="avatar-img"
                                     src="https://cdn.jsdelivr.net/gh/laoxuai/assert/images/20200125221102.png"
                                     alt="avatar">
-                                <div class="author-info__name">Bucaicai</div>
-                                <div class="author-info__description">95后青年，后端开发者，略懂前端, <s>学生，实习</s>，缺乏社会的毒打</div>
+                                <div class="author-info__name">AstronautDale</div>
+                                <div class="author-info__description">PKU信科电子大二摸鱼人, <s>学生</s>，摆烂人</div>
                             </div>
                             <div class="card-info-social-icons is-center">
                                 <a class="social-icon" href="https://github.com/laoxuai" target="_blank">
@@ -101,7 +101,7 @@
                 <article id="page">
                     <div class="article-container">
                         <h2>音乐</h2>
-                        <meting-js auto="https://y.qq.com/n/yqq/playlist/7713574197.html">
+                        <meting-js auto="https://www.kugou.com/songlist/gcid_3zlrdnimzkz034/?uid=1144062452&chl=link&iszlist=1">
                         </meting-js>
                         <hr>
 
