--- a/index.html
+++ b/index.html
@@ -100,77 +100,47 @@
                 </div>
                 <article id="page">
                     <div class="article-container">
-                        <h2>音乐</h2>
-                        <meting-js auto="https://www.kugou.com/songlist/gcid_3zlrdnimzkz034/?uid=1144062452&chl=link&iszlist=1">
-                        </meting-js>
-                        <hr>
-
-                        <h2>技能</h2>
+                        <h2>爱好</h2>
                         <div class="skillbox">
                             <div class="skillbar">
                                 <div class="skillbar-title"
                                     style="background: linear-gradient(to right, #FF0066 0%, #FF00CC 100%); width: 75%">
-                                    <span>Java</span>
+                                    <span>音游</span>
                                 </div>
                                 <div class="skill-bar-percent">75%</div>
                             </div>
                             <div class="skillbar">
                                 <div class="skillbar-title"
                                     style="background: linear-gradient(to right, #9900FF 0%, #CC66FF 100%); width: 40%">
-                                    <span>前端</span>
+                                    <span>摄影</span>
                                 </div>
                                 <div class="skill-bar-percent">40%</div>
                             </div>
                             <div class="skillbar">
                                 <div class="skillbar-title"
-                                    style="background: linear-gradient(to right, #2196F3 0%, #42A5F5 100%); width: 60%">
-                                    <span>Spring</span>
+                                    style="background: linear-gradient(to right, #2196F3 0%, #42A5F5 100%); width: 35%">
+                                    <span>硬件</span>
                                 </div>
                                 <div class="skill-bar-percent">60%</div>
                             </div>
                             <div class="skillbar">
                                 <div class="skillbar-title"
-                                    style="background: linear-gradient(to right, #00BCD4 0%, #80DEEA 100%); width: 70%">
-                                    <span>SpringMVC</span>
+                                    style="background: linear-gradient(to right, #00BCD4 0%, #80DEEA 100%); width: 40%">
+                                    <span>排球</span>
                                 </div>
                                 <div class="skill-bar-percent">70%</div>
                             </div>
-                            <div class="skillbar">
-                                <div class="skillbar-title"
-                                    style="background: linear-gradient(to right, #00BCD4 0%, #f54009 100%); width: 80%">
-                                    <span>SpringBoot</span>
-                                </div>
-                                <div class="skill-bar-percent">80%</div>
-                            </div>
-                            <div class="skillbar">
-                                <div class="skillbar-title"
-                                    style="background: linear-gradient(to right, #4CAF50 0%, #81C784 100%); width: 60%">
-                                    <span>Mybatis</span>
-                                </div>
-                                <div class="skill-bar-percent">60%</div>
-                            </div>
-                            <div class="skillbar">
-                                <div class="skillbar-title"
-                                    style="background: linear-gradient(to right, #FFEB3B 0%, #FFF176 100%); width: 75%">
-                                    <span>数据结构与算法</span>
-                                </div>
-                                <div class="skill-bar-percent">75%</div>
-                            </div>
-                        </div>
-
                         <hr>
-                        <h2>刷题</h2>
+                        <h2>个人主页</h2>
                         <div class="tool">
-                            <a href="https://leetcode-cn.com/problemset/all/" target="_blank">Leetcode</a><br>
-                            <a href="https://www.nowcoder.com/ta/coding-interviews" target="_blank">剑指 Offer</a>
+                            <a href="https://space.bilibili.com/508082748?spm_id_from=333.1007.0.0">b站主页</a><br>
+                            <a href="https://www.bilibili.com/read/cv19386542?spm_id_from=333.999.list.card_article.click">b站自我介绍</a>
+                            <a href="https://github.com/Dale2003">github主页</a>
+                            <a href="https://www.zhihu.com/people/yu-hang-yuan-81-53">知乎主页</a><br>
+                            <a href="https://m.weibo.cn/profile/6356381624">微博主页</a><br>
+                            <a href=" https://www.douyin.com/user/MS4wLjABAAAAwH5lh4xW8RNqwhbfXrOVXjPSA6jt-FkBx8OMqj9rtqc">抖音主页</a><br>
+                            <a>个人邮箱：dale2003@126.com</a><br>
                         </div>
-
-                        <hr>
-                        <h2>收藏</h2>
-                        <div class="tool">
-                            <a href="http://tooool.org/" target="_blank" rel="noopener noreferrer">程序员导航、</a>
-                            <a href="https://adzhp.cn/" target="_blank" rel="noopener noreferrer">爱达杂货铺、</a>
-                            <a href="http://ifeve.com/" target="_blank" rel="noopener noreferrer">并发编程网</a>
                         </div>
                     </div>
                 </article>
