--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <div id="body-wrap">
-        <nav class="not_index_bg" id="nav" style="background-image:url(https://api.ixiaowai.cn/api/api.php)">
+        <nav class="not_index_bg" id="nav" style="background-image:url(https://v.api.aa1.cn/api/api-fj-1/index.php)">
             <div id="page_site-info">
                 <div id="site-title">
                     <span class="blogtitle"></span>
@@ -47,13 +47,13 @@
                         <div class="card-content">
                             <div class="card-info-avatar is-center">
                                 <img class="avatar-img"
-                                    src="https://cdn.jsdelivr.net/gh/laoxuai/assert/images/20200125221102.png"
+                                    src="https://p9-pc-sign.douyinpic.com/aweme/100x100/aweme-avatar/tos-cn-i-0813_36f8b9f40ff249af8c54d47a8adaee46.jpeg?x-expires=1667664000&x-signature=qW3nDvfLtgDutz2PJVa%2BFb0fqAA%3D&from=2480802190"
                                     alt="avatar">
                                 <div class="author-info__name">AstronautDale</div>
-                                <div class="author-info__description">PKU信科电子大二摸鱼人, <s>学生</s>，摆烂人</div>
+                                <div class="author-info__description">PKU信科电子大二在读，摸鱼摆烂人，社牛音游人一枚，江湖绰号qlb</div>
                             </div>
                             <div class="card-info-social-icons is-center">
-                                <a class="social-icon" href="https://github.com/laoxuai" target="_blank">
+                                <a class="social-icon" href="https://github.com/dale2003" target="_blank">
                                     <i class="fa fa-github"></i>
                                 </a>
                             </div>
@@ -134,12 +134,12 @@
                         <h2>个人主页</h2>
                         <div class="tool">
                             <a href="https://space.bilibili.com/508082748?spm_id_from=333.1007.0.0">b站主页</a><br>
-                            <a href="https://www.bilibili.com/read/cv19386542?spm_id_from=333.999.list.card_article.click">b站自我介绍</a>
-                            <a href="https://github.com/Dale2003">github主页</a>
+                            <a href="https://www.bilibili.com/read/cv19386542?spm_id_from=333.999.list.card_article.click">b站自我介绍</a><br>
+                            <a href="https://github.com/Dale2003">github主页</a><br>
                             <a href="https://www.zhihu.com/people/yu-hang-yuan-81-53">知乎主页</a><br>
                             <a href="https://m.weibo.cn/profile/6356381624">微博主页</a><br>
                             <a href=" https://www.douyin.com/user/MS4wLjABAAAAwH5lh4xW8RNqwhbfXrOVXjPSA6jt-FkBx8OMqj9rtqc">抖音主页</a><br>
-                            <a>个人邮箱：dale2003@126.com</a><br>
+                            <ahref="dale2003@126.com">Email</a><br>
                         </div>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
         </main>
         <footer id="footer">
             <div id="footer-wrap">
-                <div class="copyright">&copy;2019 - 2021 BY Bucaicai</div>
+                <div class="copyright">&copy;2021-2022 BY Dale2003</div>
             </div>
         </footer>
     </div>
@@ -171,9 +171,7 @@
     <script src="https://v1.hitokoto.cn/?encode=js&select=%23hitokoto" defer></script>
     <script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
 
-    <!-- 看板娘 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css">
-    <script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>
+   
 
     <!--鼠标点击效果-->
     <script src="https://cdn.jsdelivr.net/gh/TRHX/CDN-for-itrhx.com@3.0.8/js/maodian.js"></script>
@@ -233,12 +231,12 @@
         document.addEventListener('visibilitychange', function () {
             if (document.hidden) {
                 // $('[rel="icon"]').attr('href', "/funny.ico");
-                document.title = '╭(°A°`)╮ 页面崩溃啦 ~';
+                document.title = '╭(°A°`)╮ 你怎么不看我了呜呜呜';
                 clearTimeout(titleTime);
             }
             else {
                 $('[rel="icon"]').attr('href', "/favicon.ico");
-                document.title = '(ฅ>ω<*ฅ) 噫又好啦 ~' + OriginTitle;
+                document.title = '(ฅ>ω<*ฅ) 嘿嘿 ~' + OriginTitle;
                 titleTime = setTimeout(function () {
                     document.title = OriginTitle;
                 }, 2000);
