--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="card-content">
                             <div class="card-info-avatar is-center">
                                 <img class="avatar-img"
-                                    src="https://p9-pc-sign.douyinpic.com/aweme/100x100/aweme-avatar/tos-cn-i-0813_36f8b9f40ff249af8c54d47a8adaee46.jpeg?x-expires=1667664000&x-signature=qW3nDvfLtgDutz2PJVa%2BFb0fqAA%3D&from=2480802190"
+                                    src="/avatar.jpg"
                                     alt="avatar">
                                 <div class="author-info__name">AstronautDale</div>
                                 <div class="author-info__description">PKU信科电子大二在读，摸鱼摆烂人，社牛音游人一枚，江湖绰号qlb</div>
@@ -133,13 +133,12 @@
                         <hr>
                         <h2>个人主页</h2>
                         <div class="tool">
-                            <a href="https://space.bilibili.com/508082748?spm_id_from=333.1007.0.0">b站主页</a><br>
-                            <a href="https://www.bilibili.com/read/cv19386542?spm_id_from=333.999.list.card_article.click">b站自我介绍</a><br>
-                            <a href="https://github.com/Dale2003">github主页</a><br>
-                            <a href="https://www.zhihu.com/people/yu-hang-yuan-81-53">知乎主页</a><br>
-                            <a href="https://m.weibo.cn/profile/6356381624">微博主页</a><br>
-                            <a href=" https://www.douyin.com/user/MS4wLjABAAAAwH5lh4xW8RNqwhbfXrOVXjPSA6jt-FkBx8OMqj9rtqc">抖音主页</a><br>
-                            <ahref="dale2003@126.com">Email</a><br>
+                            <a href="https://space.bilibili.com/508082748?spm_id_from=333.1007.0.0"><img src="/bili.png" height="60" width="60"/></a>
+                            <a href="https://github.com/Dale2003"><img src="/git.jpg" height="60" width="60"/></a>
+                            <a href="https://www.zhihu.com/people/yu-hang-yuan-81-53"><img src="/zhi.jpg" height="60" width="60"/></a>
+                            <a href="https://m.weibo.cn/profile/6356381624"><img src="/wei.jpg" height="60" width="60"/></a>
+                            <a href="https://www.douyin.com/user/MS4wLjABAAAAwH5lh4xW8RNqwhbfXrOVXjPSA6jt-FkBx8OMqj9rtqc"><img src="/dou.jpg" height="60" width="60"/></a><br>
+                            <a href="dale2003@126.com">Email</a><br>
                         </div>
                         </div>
                     </div>
