--- a/index.html
+++ b/index.html
@@ -52,11 +52,6 @@
                                 <div class="author-info__name">AstronautDale</div>
                                 <div class="author-info__description">PKU信科电子大二在读，摸鱼摆烂人，社牛音游人一枚，江湖绰号qlb</div>
                             </div>
-                            <div class="card-info-social-icons is-center">
-                                <a class="social-icon" href="https://github.com/dale2003" target="_blank">
-                                    <i class="fa fa-github"></i>
-                                </a>
-                            </div>
                         </div>
                     </div>
 
@@ -135,10 +130,10 @@
                         <div class="tool">
                             <a href="https://space.bilibili.com/508082748?spm_id_from=333.1007.0.0"><img src="/bili.png" height="60" width="60"/></a>
                             <a href="https://github.com/Dale2003"><img src="/git.jpg" height="60" width="60"/></a>
-                            <a href="https://www.zhihu.com/people/yu-hang-yuan-81-53"><img src="/zhi.jpg" height="60" width="60"/></a>
+                            <a href="https://www.zhihu.com/people/yu-hang-yuan-81-53"><img src="/zhi.png" height="60" width="60"/></a>
                             <a href="https://m.weibo.cn/profile/6356381624"><img src="/wei.jpg" height="60" width="60"/></a>
-                            <a href="https://www.douyin.com/user/MS4wLjABAAAAwH5lh4xW8RNqwhbfXrOVXjPSA6jt-FkBx8OMqj9rtqc"><img src="/dou.jpg" height="60" width="60"/></a><br>
-                            <a href="dale2003@126.com">Email</a><br>
+                            <a href="https://www.douyin.com/user/MS4wLjABAAAAwH5lh4xW8RNqwhbfXrOVXjPSA6jt-FkBx8OMqj9rtqc"><img src="/dou.jpg" height="60" width="60"/></a>
+                            <ahref= "mailto:dale2003@126.com"><img src="/email.jpg" height="60" width="60"/></a><br>
                         </div>
                         </div>
                     </div>
