--- a/index.html
+++ b/index.html
@@ -126,6 +126,23 @@
                                 <div class="skill-bar-percent">70%</div>
                             </div>
                         <hr>
+                        <h2>摄影作品</h2>
+                            <div class="tool">
+                                <a><img src="/p1.jpg" height="240" width="320"/></a><br>
+                                <a><img src="/p2.jpg" height="240" width="320"/></a><br>
+                                <a><img src="/p3.jpg" height="240" width="320"/></a><br>
+                                <a><img src="/p4.jpg" height="240" width="320"/></a><br>
+                                <a><img src="/p5.jpg" height="240" width="180"/></a>
+                                <a><img src="/p6.jpg" height="240" width="180"/></a><br>
+                                <a><img src="/p7.jpg" height="240" width="180"/></a>
+                                <a><img src="/p8.jpg" height="240" width="180"/></a><br>
+                            </div>
+                        <h2>音游成就</h2>
+                            <div class="tool">
+                                <a><img src="/g1.jpg" height="240" width="320"/></a><br>
+                                <a><img src="/g2.jpg" height="240" width="320"/></a><br>
+                                <a><img src="/g3.jpg" height="240" width="320"/></a><br>
+                            <div>
                         <h2>个人主页</h2>
                         <div class="tool">
                             <a href="https://space.bilibili.com/508082748?spm_id_from=333.1007.0.0"><img src="/bili.png" height="60" width="60"/></a>
