--- a/index.html
+++ b/index.html
@@ -92,9 +92,14 @@
                             </div>
                         </div>
                     </div>
+                    <h2>音乐</h2>
+                        <meting-js auto="https://y.qq.com/n/ryqq/playlist/2016391989.html">
+                        </meting-js>
+                        <hr>
                 </div>
                 <article id="page">
                     <div class="article-container">
+                        
                         <h2>爱好</h2>
                         <div class="skillbox">
                             <div class="skillbar">
@@ -128,20 +133,20 @@
                         <hr>
                         <h2>摄影作品</h2>
                             <div class="tool">
-                                <a><img src="/p1.jpg" height="240" width="320"/></a><br>
-                                <a><img src="/p2.jpg" height="240" width="320"/></a><br>
-                                <a><img src="/p3.jpg" height="240" width="320"/></a><br>
-                                <a><img src="/p4.jpg" height="240" width="320"/></a><br>
+                                <a><img src="/p1.jpg" height="240" width="320"/></a>
+                                <a><img src="/p2.jpg" height="240" width="320"/></a>
+                                <a><img src="/p3.jpg" height="240" width="320"/></a>
+                                <a><img src="/p4.jpg" height="240" width="320"/></a>
                                 <a><img src="/p5.jpg" height="240" width="180"/></a>
-                                <a><img src="/p6.jpg" height="240" width="180"/></a><br>
+                                <a><img src="/p6.jpg" height="240" width="180"/></a>
                                 <a><img src="/p7.jpg" height="240" width="180"/></a>
-                                <a><img src="/p8.jpg" height="240" width="180"/></a><br>
+                                <a><img src="/p8.jpg" height="240" width="180"/></a>
                             </div>
                         <h2>音游成就</h2>
                             <div class="tool">
-                                <a><img src="/g1.jpg" height="240" width="320"/></a><br>
-                                <a><img src="/g2.jpg" height="240" width="320"/></a><br>
-                                <a><img src="/g3.jpg" height="240" width="320"/></a><br>
+                                <a><img src="/g1.jpg" height="240" width="320"/></a>
+                                <a><img src="/g2.jpg" height="240" width="320"/></a>
+                                <a><img src="/g3.jpg" height="240" width="320"/></a>
                             <div>
                         <h2>个人主页</h2>
                         <div class="tool">
