--- a/index.html
+++ b/index.html
@@ -92,10 +92,9 @@
                             </div>
                         </div>
                     </div>
-                    <h2>音乐</h2>
+                    <h2>我喜欢的音乐</h2>
                         <meting-js auto="https://y.qq.com/n/ryqq/playlist/2016391989.html">
                         </meting-js>
-                        <hr>
                 </div>
                 <article id="page">
                     <div class="article-container">
@@ -142,12 +141,14 @@
                                 <a><img src="/p7.jpg" height="240" width="180"/></a>
                                 <a><img src="/p8.jpg" height="240" width="180"/></a>
                             </div>
+                            <hr>
                         <h2>音游成就</h2>
                             <div class="tool">
                                 <a><img src="/g1.jpg" height="240" width="320"/></a>
                                 <a><img src="/g2.jpg" height="240" width="320"/></a>
                                 <a><img src="/g3.jpg" height="240" width="320"/></a>
                             <div>
+                            <hr>
                         <h2>个人主页</h2>
                         <div class="tool">
                             <a href="https://space.bilibili.com/508082748?spm_id_from=333.1007.0.0"><img src="/bili.png" height="60" width="60"/></a>
