--- a/index.html
+++ b/index.html
@@ -132,21 +132,25 @@
                         <hr>
                         <h2>摄影作品</h2>
                             <div class="tool">
-                                <a><img src="/p1.jpg" height="210" width="280"/></a>
-                                <a><img src="/p2.jpg" height="210" width="280"/></a><br>
-                                <a><img src="/p3.jpg" height="210" width="280"/></a>
-                                <a><img src="/p4.jpg" height="210" width="280"/></a><br>
-                                <a><img src="/p5.jpg" height="200" width="150"/></a>
-                                <a><img src="/p6.jpg" height="200" width="150"/></a>
-                                <a><img src="/p7.jpg" height="200" width="150"/></a>
-                                <a><img src="/p8.jpg" height="200" width="150"/></a>
+                                <marquee>
+                                <img src="/p1.jpg" height="210" width="280"/>
+                                <img src="/p2.jpg" height="210" width="280"/>
+                                <img src="/p3.jpg" height="210" width="280"/>
+                                <img src="/p4.jpg" height="210" width="280"/>
+                                <img src="/p5.jpg" height="200" width="150"/>
+                                <img src="/p6.jpg" height="200" width="150"/>
+                                <img src="/p7.jpg" height="200" width="150"/>
+                                <img src="/p8.jpg" height="200" width="150"/>
+                                </marquee>
                             </div>
                             <hr>
                         <h2>音游成就</h2>
                             <div class="tool">
-                                <a><img src="/g1.jpg" height="180" width="240"/></a>
-                                <a><img src="/g2.jpg" height="180" width="240"/></a>
-                                <a><img src="/g3.jpg" height="180" width="240"/></a>
+                                <marquee>
+                                <img src="/g1.jpg" height="180" width="240"/>
+                                <img src="/g2.jpg" height="180" width="240"/>
+                                <img src="/g3.jpg" height="180" width="240"/>
+                                </marquee>
                             <div>
                             <hr>
                         <h2>个人主页</h2>
