--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <div id="body-wrap">
-        <nav class="not_index_bg" id="nav" style="background-image:url(https://v.api.aa1.cn/api/api-fj-1/index.php?aa1=yuantu)">
+        <nav class="not_index_bg" id="nav" style="background-image:url(https://api.zbcode.cn/fj/rand.php)">
             <div id="page_site-info">
                 <div id="site-title">
                     <span class="blogtitle"></span>
