--- a/index.html
+++ b/index.html
@@ -56,6 +56,37 @@
 </head>
 
 <body>
+    <div class="swiper mySwiper">
+                              <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                  <img src="/p1.jpg" />
+                                </div>
+                                <div class="swiper-slide">
+                                  <img src="/p2.jpg" />
+                                </div>
+                                <div class="swiper-slide">
+                                  <img src="/p3.jpg" />
+                                </div>
+                                <div class="swiper-slide">
+                                  <img src="/p4.jpg" />
+                                </div>
+                                <div class="swiper-slide">
+                                  <img src="/p5.jpg" />
+                                </div>
+                                <div class="swiper-slide">
+                                  <img src="/p6.jpg" />
+                                </div>
+                                  <div class="swiper-slide">
+                                  <img src="/p7.jpg" />
+                                </div>
+                                  <div class="swiper-slide">
+                                  <img src="/p8.jpg" />
+                                </div>
+                              </div>
+                              <div class="swiper-button-next"></div>
+                              <div class="swiper-button-prev"></div>
+                              <div class="swiper-pagination"></div>
+                            </div>
     <div id="body-wrap">
         <nav class="not_index_bg" id="nav" style="background-image:url(https://api.zbcode.cn/fj/rand.php)">
             <div id="page_site-info">
