--- a/index.html
+++ b/index.html
@@ -36,21 +36,57 @@
       }
 
       .swiper {
-        width: 300px;
-        height: 300px;
-        padding: 50px;
+        width: 100%;
+        height: 100%;
       }
 
       .swiper-slide {
-        background-position: center;
-        background-size: cover;
-        width: 300px;
-        height: 300px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: relative;
       }
 
       .swiper-slide img {
         display: block;
         width: 100%;
+      }
+
+      @media only screen and (min-width: 769px) {
+        .swiper-slide:first-child {
+          transition: transform 100ms;
+        }
+
+        .swiper-slide:first-child img {
+          transition: box-shadow 500ms;
+        }
+
+        .swiper-slide.swiper-slide-active:first-child {
+          transform: translateX(50%);
+          z-index: 2;
+        }
+
+        .swiper-slide.swiper-slide-active:first-child img {
+          box-shadow: 0px 32px 80px rgba(0, 0, 0, 0.35);
+        }
+
+        .swiper-slide:nth-child(2) {
+          transition: transform 100ms;
+        }
+
+        .swiper-slide.swiper-slide-next:nth-child(2) {
+          transform: translateX(55%);
+          z-index: 1;
+        }
+
+        .swiper[dir="rtl"] .swiper-slide.swiper-slide-active:first-child {
+          transform: translateX(-50%);
+        }
+
+        .swiper[dir="rtl"] .swiper-slide.swiper-slide-next:nth-child(2) {
+          transform: translateX(-55%);
+        }
       }
     </style>
 </head>
@@ -86,6 +122,7 @@
                               <div class="swiper-button-next"></div>
                               <div class="swiper-button-prev"></div>
                               <div class="swiper-pagination"></div>
+                              <div class="swiper-scrollbar"></div>
                             </div>
     <div id="body-wrap">
         <nav class="not_index_bg" id="nav" style="background-image:url(https://api.zbcode.cn/fj/rand.php)">
@@ -291,18 +328,33 @@
             
     <script src=".vscode/swiper-bundle.min.js"></script>
     <script>
-          var swiper = new Swiper(".mySwiper", {
-            effect: "flip",
-            grabCursor: true,
-            pagination: {
-              el: ".swiper-pagination",
-            },
-            navigation: {
-              nextEl: ".swiper-button-next",
-              prevEl: ".swiper-button-prev",
-            },
-          });
-        </script>
+      var swiper = new Swiper(".mySwiper", {
+        slidesPerView: 1,
+        centeredSlides: false,
+        slidesPerGroupSkip: 1,
+        grabCursor: true,
+        keyboard: {
+          enabled: true,
+        },
+        breakpoints: {
+          769: {
+            slidesPerView: 2,
+            slidesPerGroup: 2,
+          },
+        },
+        scrollbar: {
+          el: ".swiper-scrollbar",
+        },
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
+      });
+    </script>
 
    
 
