--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
             alert('朋友，上古浏览器不支持呢~');
         }
     </script>
+    <style>
+        html{
+            filter: grayscale(1);
+        }
+    </style>
+        
     
 </head>
 
