--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                     <h2>我喜欢的音乐</h2>
                         <meting-js auto="https://y.qq.com/n/ryqq/playlist/2016391989.html">
                         </meting-js>
+                    <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/cn/playlist/%E7%BA%AF%E9%9F%B3%E4%B9%90-%E8%88%92%E7%BC%93/pl.u-LdbqelvIxWz72B9"></iframe>
                 </div>
                 <article id="page">
                     <div class="article-container">
