--- a/index.html
+++ b/index.html
@@ -96,10 +96,9 @@
                             </div>
                         </div>
                     </div>
-                    <h2>我喜欢的音乐</h2>
-                        <meting-js auto="https://y.qq.com/n/ryqq/playlist/2016391989.html">
-                        </meting-js>
-                    <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/cn/playlist/%E7%BA%AF%E9%9F%B3%E4%B9%90-%E8%88%92%E7%BC%93/pl.u-LdbqelvIxWz72B9"></iframe>
+                    <span>我喜欢的音乐</span>
+                        <meting-js auto="https://y.qq.com/n/ryqq/playlist/2016391989.html"></meting-js>
+                        <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="450" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/cn/playlist/%E5%8D%8E%E8%AF%AD/pl.u-BNA6Yl3F1z2kedG"></iframe>
                 </div>
                 <article id="page">
                     <div class="article-container">
@@ -158,6 +157,9 @@
                                 <img src="/g3.jpg" height="167" width="239"/>
                                 </marquee>
                             <div>
+                                <iframe src="//player.bilibili.com/player.html?aid=518124707&bvid=BV1mg411p7PM&cid=902609266&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+                                <iframe src="//player.bilibili.com/player.html?aid=817482505&bvid=BV1pG4y1t7Jn&cid=884613859&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+                                <iframe src="//player.bilibili.com/player.html?aid=860238651&bvid=BV1RG4y1o7zs&cid=893064124&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
                             <hr>
                         <h2>个人主页</h2>
                         <div class="tool">
