--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
                                 <img src="/g3.jpg" height="167" width="239"/>
                                 </marquee>
                             <div>
-                                <iframe src="//player.bilibili.com/player.html?aid=518124707&bvid=BV1mg411p7PM&cid=902609266&page=1" scrolling="yes" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="80%" height="80%" high_quality="1" danmaku="1"> </iframe>
-                                <iframe src="//player.bilibili.com/player.html?aid=817482505&bvid=BV1pG4y1t7Jn&cid=884613859&page=1" scrolling="yes" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="80%" height="80%" high_quality="1" danmaku="1"> </iframe>
-                                <iframe src="//player.bilibili.com/player.html?aid=860238651&bvid=BV1RG4y1o7zs&cid=893064124&page=1" scrolling="yes" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="80%" height="80%" high_quality="1" danmaku="1"> </iframe>
+                                <iframe src="//player.bilibili.com/player.html?aid=518124707&bvid=BV1mg411p7PM&cid=902609266&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="50%" height="50%" high_quality="0" danmaku="0"> </iframe>
+                                <iframe src="//player.bilibili.com/player.html?aid=817482505&bvid=BV1pG4y1t7Jn&cid=884613859&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="50%" height="50%" high_quality="0" danmaku="0"> </iframe>
+                                <iframe src="//player.bilibili.com/player.html?aid=860238651&bvid=BV1RG4y1o7zs&cid=893064124&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="50%" height="50%" high_quality="0" danmaku="0"> </iframe>
                             <hr>
                         <h2>个人主页</h2>
                         <div class="tool">
