--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                             <div>
                                 <iframe src="//player.bilibili.com/player.html?aid=518124707&bvid=BV1mg411p7PM&cid=902609266&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" high_quality="0" danmaku="0"> </iframe>
                                 <iframe src="//player.bilibili.com/player.html?aid=817482505&bvid=BV1pG4y1t7Jn&cid=884613859&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" high_quality="0" danmaku="0"> </iframe>
-                                <iframe src="//player.bilibili.com/player.html?aid=860238651&bvid=BV1RG4y1o7zs&cid=893064124&page=1" scrolling="yes" border="0" frameborder="no" framespacing="0" allowfullscreen="true" high_quality="0" danmaku="0"> </iframe>
+                                <iframe src="//player.bilibili.com/player.html?aid=860238651&bvid=BV1RG4y1o7zs&cid=893064124&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" high_quality="0" danmaku="0"> </iframe>
                             <hr>
                         <h2>个人主页</h2>
                         <div class="tool">
