--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>宇航员dale | AstronautDale</title>
-    <meta name="description" content="PKU信科电子大二在读，摸鱼摆烂人，社牛音游人一枚，江湖绰号qlb">
+    <meta name="description" content="PKU信科电子大四在读，摸鱼摆烂人，社牛音游人一枚，江湖绰号qlb">
     <meta name="keywords" content="音游，摄影，硬件，排球，PKU，个人主页">
     <meta name="format-detection" content="telephone=no">
     
