--- a/index.html
+++ b/index.html
@@ -30,6 +30,31 @@
     <!-- 雪花容器 -->
     <div class="snowflakes-container"></div>
     
+    <!-- 项目导航栏 -->
+    <nav class="project-nav">
+        <div class="container">
+            <div class="project-nav-content">
+                <h3 class="project-nav-title">
+                    <i class="fa fa-rocket"></i> 我的项目
+                </h3>
+                <div class="project-nav-links">
+                    <a href="https://blog.dale2003.cn" target="_blank">
+                        <i class="fa fa-edit"></i> 个人博客
+                    </a>
+                    <a href="https://maidle.dale2003.cn" target="_blank">
+                        <i class="fa fa-gamepad"></i> maidle小游戏
+                    </a>
+                    <a href="https://maimai.dale2003.cn" target="_blank">
+                        <i class="fa fa-music"></i> maimai曲目信息查询
+                    </a>
+                    <a href="https://b50.dale2003.cn" target="_blank">
+                        <i class="fa fa-bar-chart"></i> maimai游玩数据查询
+                    </a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    
     <!-- 页面主体 -->
     <div class="page-wrapper">
         <!-- 头部区域 -->
